# tcatool

./: .gitignore  .pylintrc  LICENSE  README.md  requirements.txt  setup.cfg
src/: __main__.py  code_gen.py  file_types.py  path_builder.py  requirements.txt  utility.py
src/code_generation/: code_gen.py  generate_action.py  generate_environment.py  generate_reducer.py  generate_state.py  generate_view.py
src/models/: file_types.py  gen_config.py
src/tcatool/: main.py
src/utilities/: path_builder.py
tests/: test_case_base.py  test_generate_action.py  test_generate_environment.py  test_generate_reducer.py  test_generate_state.py  test_generate_view.py  test_utilities.py
tests/cli/: test_commands.py  test_path_builder.py
tests/code_gen/: test_generate_action.py  test_generate_environment.py  test_generate_reducer.py  test_generate_state.py  test_generate_view.py
tests/expectedOutput/generate_action/: create_action.swift
tests/expectedOutput/generate_environment/: create_app_environment.swift
tests/expectedOutput/generate_reducer/: create_reducer.swift
tests/expectedOutput/generate_state/: create_state.swift
tests/expectedOutput/generate_view/: create_view.swift
