[metadata]
name = tcatool
version = 0.1.1
author = Georgi Ivanov
author_email = georgi.ivanovtn@gmail.com
description = CLI that helps automate some of the work necessary for using The Composable Architecture
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/georgiIvanov/tcatool
project_urls =
    Bug Tracker = https://github.com/georgiIvanov/tcatool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src